# portal_jekyll

./: .gitignore  Gemfile  README.md  _config.yml  full_stack.md  index.md  package.json  projetos2.md  tests.md
spec_backend_com_python/: index.md  pyproject.toml  tasks.py
spec_backend_com_python/.antigravity/: README.md  implementation_plan.md  sync.ps1  task.md  walkthrough.md
spec_backend_com_python/.antigravity/history/: README.md
spec_backend_com_python/.github/workflows/: documentation.yaml  test.yml
spec_backend_com_python/.ruff_cache/0.15.0/: 1220719478911871400  3654020831274157463  3740685525055029753  4722265227379903186
spec_backend_com_python/aulas/: index.md  recursos_visuais.md
spec_backend_com_python/aulas/assets/css/: extra.css
spec_backend_com_python/aulas/assets/js/: mermaid-init.js  quiz.js
spec_backend_com_python/aulas/exercicios/: index.md
spec_backend_com_python/aulas/exercicios/27_alunos_media_01/: aluno.py  main.py
spec_backend_com_python/aulas/modulos/: python_avancado.md  python_basico.md
spec_backend_com_python/aulas/projetos/: index.md
spec_backend_com_python/aulas/quiz/: index.md  python_avancado.md  python_basico.md
spec_backend_com_python/aulas/setup/: instalacao_windows.md
spec_backend_com_python/aulas/slides/: index.md
spec_backend_com_python/exemplos/: calculadora.md
spec_backend_com_python/exercicios/: beecrowd_1002.md  utfpr_lp_atividade1.md
spec_backend_com_python/hooks/: __init__.py  copy_slides.py
spec_backend_com_python/site/: index.html  sitemap.xml
spec_backend_com_python/site/assets/css/: extra.css  home.css
spec_backend_com_python/site/exercicios/beecrowd_1002/: index.html
spec_backend_com_python/slides/: README.md
spec_backend_com_python/slides/brutos/: 00-introducao.md  material.css
spec_backend_com_python/slides/html/: 00-introducao.html
spec_backend_com_python/tests/: TEST_REPORT.md
(+1822 files in other folders)
