[project]
name = "ads-spec-backend-com-python"
version = "1.0.0"
description = "Curso Completo de Python - Backend"
authors = [
    {name = "Ricardo", email = "ricardo@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.21,<10.0.0)",
    "mkdocs-glightbox (>=0.5.1,<0.6.0)",
    "mkdocs-quiz (>=0.0.41,<0.0.42)",
    "mkdocs-macros-plugin (>=1.4.0,<2.0.0)",
    "mkdocs-git-authors-plugin (>=0.10.0,<0.11.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pymdown-extensions (>=10.0.0,<11.0.0)",
    "mkdocs-simple-hooks (>=0.1.5,<0.2.0)",
    "mkdocs-video (>=1.5.0,<2.0.0)",
    "termynal (>=0.13.1,<0.14.0)",
    "mkdocs-with-pdf (>=0.9.3,<0.10.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",

]

[dependency-groups]
dev = [
  "invoke (>=2.2.0,<3.0.0)",
  "rich (>=14.1.0,<15.0.0)",
  "taskipy (>=1.14.1,<2.0.0)",
  "pytest (>=8.0.0,<9.0.0)",
  "pytest-playwright (>=0.5.0,<0.6.0)",
  "playwright (>=1.40.0,<2.0.0)",
  "ruff (>=0.15.0,<0.16.0)",
]

[tool.taskipy.tasks]
docs = {cmd="mkdocs serve --dev-addr localhost:8000", help="Servidor local MkDocs"}
build = {cmd="mkdocs build", help="Build do site"}
slides = {cmd="marp -I slides/brutos --html --theme-set slides/brutos/material.css --theme material --allow-local-files -o slides/html", help="Gera slides com Marp"}
deploy = {cmd="mike deploy estavel --push --allow-empty", help="Deploy produção com Mike"}
test = {cmd="pytest tests/ -v", help="Executa testes"}
clean = {cmd="invoke clean", help="Limpa arquivos gerados"}

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
